[gd_scene load_steps=9 format=3 uid="uid://b3dxa4lse5fmc"]

[ext_resource type="Script" path="res://Coins/coin.gd" id="1_ofo2m"]
[ext_resource type="ArrayMesh" uid="uid://cge2fuclikg8j" path="res://Assets/Models/coinGold.obj" id="1_x75xl"]
[ext_resource type="ArrayMesh" uid="uid://del27p65jlsyp" path="res://Assets/Models/coinBronze.obj" id="3_7n13b"]
[ext_resource type="ArrayMesh" uid="uid://bjj8b1hvrgmo6" path="res://Assets/Models/coinSilver.obj" id="4_nu0y4"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_fus5o"]
height = 0.1
radius = 0.2

[sub_resource type="Animation" id="Animation_scghc"]
resource_name = "spin"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(3.48787e-16, 6.28319, 3.48787e-16), Vector3(3.48787e-16, 12.5664, 3.48787e-16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(2.08165e-12, 0.22, 2.08165e-12), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_ympqd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lbx1o"]
_data = {
"RESET": SubResource("Animation_ympqd"),
"spin": SubResource("Animation_scghc")
}

[node name="Coin" type="Node3D"]
script = ExtResource("1_ofo2m")

[node name="Coin" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Coin"]
transform = Transform3D(1, 0, -1.5246e-23, -1.5246e-23, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.192534, 0)
shape = SubResource("CylinderShape3D_fus5o")

[node name="CoinGold" type="MeshInstance3D" parent="Coin"]
visible = false
mesh = ExtResource("1_x75xl")
skeleton = NodePath("../..")

[node name="CoinBronze" type="MeshInstance3D" parent="Coin"]
visible = false
mesh = ExtResource("3_7n13b")
skeleton = NodePath("../..")

[node name="CoinSilver" type="MeshInstance3D" parent="Coin"]
mesh = ExtResource("4_nu0y4")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Coin"]
libraries = {
"": SubResource("AnimationLibrary_lbx1o")
}
autoplay = "spin"

[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
